{
    "name": "GameplayInputs",
    "maps": [
        {
            "name": "PlayerActionMap",
            "id": "e1c04c54-61b3-4e19-85f1-3fa7a9387b1d",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "677aad31-c4e9-4c7f-9c4b-41ccd533beb6",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "5c1c8557-b826-4a2b-b50d-7b13d1cf0b17",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SwapAngel",
                    "type": "Button",
                    "id": "23e2dccc-aaaf-4419-a2d6-c8baaed4f1d9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SwapDevil",
                    "type": "Button",
                    "id": "8d376093-d12f-4104-bbfa-a74744f0201d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "04e3abae-8f86-45eb-8c8c-311016d2f67b",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "37b80db1-95fc-48dc-ad84-67a5f391755b",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "5abff360-32a3-49d4-ad42-587a7d84bcc0",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "bb7f0e8b-2705-4e43-ad63-2ced4b7ec682",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ab3983df-5556-43f8-97d6-48895a6c1107",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwapAngel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "652dfb5f-683c-44f8-bc26-f33a6b6a944d",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwapDevil",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}